fixed all of the projects on project page to align correctly and uniformally with css. fixed my profile picture placeholder on the home page.

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,115 +1,132 @@
 @font-face {
   font-family: "DisketMono";
   src: local("DisketMono"),
-   url("../fonts/Disket-Mono-Regular.ttf") format("truetype");
+    url("../fonts/Disket-Mono-Regular.ttf") format("truetype");
   font-weight: bold;
-  }
+}
 
 .container {
-    margin: auto;
-    max-width: 1000px;
-    font-family: 'DisketMono', monospace;
-  }
+  text-align: center;
+  margin: auto;
+  max-width: 1000px;
+  font-family: "DisketMono", monospace;
+}
 
-  .heading {
-    color: rebeccapurple;
-  }
+.heading {
+  color: rebeccapurple;
+}
 
-  .nav-links {
-    background-color: black;
-    width: 100%;
-    display: flex;
-    list-style: none;
-    padding-left: 2px;
-    padding-bottom: 5px;
-  }
-  .nav-link-item {
-    padding-right: 2rem;
-  }
-  .nav-link-text {
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-  }
+.profile-pic {
+  border-radius: 50%;
+  width: 250px;
+  height: 250px;
+}
 
-  .site-title {
-    font-size: 3rem;
-    color: gray;
-    font-weight: 700;
-  }
+.nav-links {
+  background-color: black;
+  width: 100%;
+  display: flex;
+  list-style: none;
+  padding-left: 2px;
+  padding-bottom: 5px;
+  padding-top: 4px;
+}
+.nav-link-item {
+  padding-right: 2rem;
+}
+.nav-link-text {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+}
 
-  .project-container {
-    display: inline-grid;
-    width: 100%;
-    grid-template-columns: 10% 35% 10% 35% 10%;
-    grid-template-rows: auto; 
-    column-gap: 10px;
-    row-gap: 15px;
-    grid-template-areas: 
-    ". npc . story ."
-    ". npclink . storylink ." 
-    ". character . . manager "
-    ". characterlink . . managerLink" 
-    ;
-  }
-    .npc-image {
-      grid-area: npc;
-      width: 400px;
-      height: 200px;
-      justify-self: center;
-      object-fit: scale-down;
-    }
-  
-  .character-image {
-    grid-area: character;
-    width: 400px;
-    height: 100%;
-    justify-self: center;
-    object-fit: scale-down;
-  }
+.site-title {
+  font-size: 3rem;
+  color: gray;
+  font-weight: 700;
+}
 
-  .story-image {
-    grid-area: story;
-    justify-self: center;
-    width: 400px;
-    height: 200px;
-    object-fit: scale-down;
-  }
+.project-container {
+  display: inline-grid;
+  width: 100%;
+  grid-template-columns: 12% 35% 6% 35% 12%;
+  grid-template-rows: auto;
+  column-gap: 5px;
+  row-gap: 5px;
+  grid-template-areas:
+    ". npc . manager ."
+    ". npclink . managerlink ."
+    ". character . story ."
+    ". characterlink . storylink .";
+}
+.npc-image {
+  grid-area: npc;
+  /* width: 400px;
+  height: 200px; */
+  max-width: max-content;
+  height: max-content;
+  justify-self: center;
+  object-fit: scale-down;
+  object-position: center;
+}
 
-  .manager-image {
-    grid-area: npc;
-    width: 400px;
-    height: 200px;
-    justify-self: center;
-    object-fit: scale-down;
-  }
+.character-image {
+  grid-area: character;
+  justify-self: center;
+  max-width: max-content;
+  height: max-content;
+  object-fit: scale-down;
+  object-position: center;
+}
 
-  .npc-link {
-    grid-area: npclink;
-    text-align: center;
-    color: rgb(0, 0, 0);
-  }
+.story-image {
+  grid-area: story;
+  justify-self: center;
+  /* width: 400px;
+  height: 220px; */
+  max-width: max-content;
+  height: max-content;
+  object-fit: scale-down;
+  object-position: center;
+}
 
-  .character-link {
-    grid-area: characterlink;
-    text-align: center;
-    color: rgb(0, 0, 0);
-  }
+.manager-image {
+  grid-area: manager;
+  /* width: 400px;
+  height: 200px; */
+  max-width: max-content;
+  height: max-content;
+  justify-self: center;
+  object-fit: scale-down;
+  object-position: center;
+}
 
-  .story-link {
-    grid-area: storylink;
-    text-align: center;
-    color: rgb(0, 0, 0);
-  }
+.npc-link {
+  grid-area: npclink;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
 
-  .manager-link {
-    grid-area: storylink;
-    text-align: center;
-    color: rgb(0, 0, 0);
-  }
+.character-link {
+  grid-area: characterlink;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
 
-  .about-me {
-    justify-items: center;
-    max-width: 800px;
-    color: rgb(3, 3, 3);
-    margin:auto;
-  }
+.story-link {
+  grid-area: storylink;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
+
+.manager-link {
+  grid-area: managerlink;
+  text-align: center;
+  color: rgb(0, 0, 0);
+}
+
+.about-me {
+  justify-items: center;
+  max-width: 800px;
+  color: rgb(3, 3, 3);
+  margin: auto;
+}
